--- a/templates/student_feedback.html
+++ b/templates/student_feedback.html
@@ -67,9 +67,13 @@
         <form action="/student_feedback" method="post">
             <select name="department" required>
                 <option value="">Select Department</option>
+                <option value="AI&DS">AI&DS</option>
                 <option value="CSE">CSE</option>
-                <option value="ECE">ECE</option>
+                <option value="IT">IT</option>
                 <option value="MECH">MECH</option>
+                <option value="AGRI">AGRI</option>
+                <option value="EEE">EEE</option>
+                <option value="ECE">ECE</option>
             </select>
             <select name="year" required>
                 <option value="">Select Year</option>
